--- a/public/index.html
+++ b/public/index.html
@@ -8,19 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>달력 테스트</title>
-    <style>
-      * {
-        margin:0;
-        padding:0;
-      }
-
-      body, html, #root {
-        width:100%;
-        height:100%;
-        background-color: rgb(130, 136, 155);
-      }
-    </style>
+    <title>투두 캘린더</title>
   </head>
   <body>
     <div id="root"></div>
